performance fix
fixed the non-stop calculations and some styling. For now, the loX text seems a little illegible, maybe color it smoothly once the anims are done?

--- a/style.css
+++ b/style.css
@@ -9,47 +9,47 @@ h2{
  position: absolute; /* or absolute */
 
   color: rgb(23, 22, 22);
-  font-size: min(10vh,20vw);
+  font-size: min(12vh,12vw);
   z-index: 10;
 }
 #lo1{
-    top:50%;
-    left: 50%;
-    translate: -100% -150%;
+    top:25%;
+    left: 40%;
+    translate: -50% -50%;
 }
-#lo2{top:50%;
-    left: 50%;
-    translate: 10% -150%;
+#lo2{top:25%;
+    left: 60%;
+    translate: -50% -50%;
 }
 #lo3{
     
-    left: 50%;
-    top:50%;
-    translate: 100% -80%;
+    left: 75%;
+    top:45%;
+    translate: -50% -100%;
 }
 #lo4{
-    left: 50%;
-    top:50%;
-    translate: 100% -10%;
+    left:75%;
+    top:55%;
+    translate: -50% 0%;
 }#lo5{
     
-    top:100%;
-    left: 50%;
-    translate: 10% -300%;
+    top:75%;
+    left: 60%;
+    translate: -50% -50%;
 }
-#lo6{top:100%;
-    left: 50%;
-    translate: -100% -300%;
+#lo6{top:75%;
+    left: 40%;
+    translate: -50% -50%;
 }#lo7{
     
-    left: 50%;
-    top:50%;
-    translate: -200% -80%;
+    left: 25%;
+    top:45%;
+    translate: -50% -100%;
 }
 #lo8{
-    left: 50%;
-    top:50%;
-    translate: -200% -10%;
+    left: 25%;
+    top:55%;
+    translate: -50% 0%;
 }
 
 svg{
@@ -68,10 +68,10 @@ body{
 .repeaterLine{
     z-index: -1;
     position: inherit;
-    stroke-width: 1px;
+    stroke-width: 1.5px;
 }
 .baseLine{
-    z-index: 2;
+    z-index: 20;
     position: inherit;
-    stroke-width: 1px;
+    stroke-width: 2px;
 }
